--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -8,4 +8,4 @@ contact_links:
     about: Share ideas for new features
   - name: Report a security issue
     url: https://github.com/VPremiss/Crafty/security/policy
-    about: Learn how to notify us for sensitive bugs
+    about: Here is how to notify us about critical security holes
