--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -35,4 +35,9 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
+    <!-- <php>
+        <env name="APP_ENV" value="self-testing"/>
+        <env name="APP_KEY" value="???"/>
+        <env name="DB_CONNECTION" value="testing"/>
+    </php> -->
 </phpunit>
