--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,7 +16,7 @@
     backupStaticProperties="false"
 >
     <testsuites>
-        <testsuite name="VPremiss Test Suite">
+        <testsuite name="Crafty Test Suite">
             <directory>tests</directory>
         </testsuite>
     </testsuites>
@@ -35,9 +35,4 @@
             <directory suffix=".php">./src</directory>
         </include>
     </source>
-    <!-- <php>
-        <env name="APP_ENV" value="self-testing"/>
-        <env name="APP_KEY" value="???"/>
-        <env name="DB_CONNECTION" value="testing"/>
-    </php> -->
 </phpunit>
