--- a/workbench/.env.example
+++ b/workbench/.env.example
@@ -1,9 +1,9 @@
-APP_NAME=Laravel
+APP_NAME=Crafty
 APP_ENV=local
 APP_KEY=AckfSECXIvnK5r28GVIWUAxmbBSjTsmF
 APP_DEBUG=true
 APP_TIMEZONE=UTC
-APP_URL=http://localhost
+APP_URL=http://127.0.0.1:8000
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
