--- a/.github/workflows/pestphp-testing.yml
+++ b/.github/workflows/pestphp-testing.yml
@@ -1,4 +1,4 @@
-name: Run tests via PestPHP
+name: pestphp-testing
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
         os: [ubuntu-latest, windows-latest]
         php: [8.3, 8.2]
         laravel: [11.*]
-        stability: [prefer-lowest, prefer-stable]
+        stability: [prefer-stable]
         include:
           - laravel: 11.*
             testbench: 9.*
@@ -47,9 +47,6 @@ jobs:
         run: |
           composer require "laravel/framework:${{ matrix.laravel }}" "orchestra/testbench:${{ matrix.testbench }}" "nesbot/carbon:${{ matrix.carbon }}" --no-interaction --no-update
           composer update --${{ matrix.stability }} --prefer-dist --no-interaction
-
-      - name: List Installed Dependencies
-        run: composer show -D
 
       - name: Execute tests
         run: vendor/bin/pest --coverage --ci
