--- a/.github/workflows/pestphp-testing.yml
+++ b/.github/workflows/pestphp-testing.yml
@@ -8,7 +8,8 @@ on:
       - 'phpunit.xml.dist'
       - 'composer.json'
       - 'composer.lock'
-    pull_request:
+  pull_request:
+    paths:
       - '**.php'
       - '.github/workflows/run-tests.yml'
       - 'phpunit.xml.dist'
