[v4.9.8] Trying to lessen CI workflow runs

--- a/.github/workflows/pestphp-testing.yml
+++ b/.github/workflows/pestphp-testing.yml
@@ -2,6 +2,9 @@ name: pestphp-testing
 
 on:
   push:
+    branches:
+      - main
+      - dev
     paths:
       - '**.php'
       - '.github/workflows/run-tests.yml'
@@ -9,6 +12,8 @@ on:
       - 'composer.json'
       - 'composer.lock'
   pull_request:
+    branches:
+      - dev
     paths:
       - '**.php'
       - '.github/workflows/run-tests.yml'
