--- a/.github/workflows/phpstan-static-analysis.yml
+++ b/.github/workflows/phpstan-static-analysis.yml
@@ -2,11 +2,16 @@ name: phpstan-static-analysis
 
 on:
   push:
+    branches:
+      - main
+      - dev
     paths:
       - '**.php'
       - 'phpstan.neon.dist'
       - '.github/workflows/phpstan.yml'
   pull_request:
+    branches:
+      - dev
     paths:
       - '**.php'
       - 'phpstan.neon.dist'
