--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -16,8 +16,8 @@
     backupStaticProperties="false"
 >
     <testsuites>
-        <testsuite name="Crafty Test Suite">
-            <directory>tests</directory>
+        <testsuite name="All Tests">
+            <directory>./tests</directory>
         </testsuite>
     </testsuites>
     <coverage>
